Implemented catalog and login

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,15 +1,15 @@
 <%- include('header'); -%>
 <form action="api/register" method="POST">
   <label for="username">Username:</label></br>
-  <input type="text" name="username"><br>
+  <input type="username" name="username"><br>
   <label for="password">Password:</label></br>
-  <input type="text" name="password"><br>
+  <input type="password" name="password"><br>
   <label for="contact">Full Name:</label></br>
   <input type="text" name="contact"><br>
   <label for="society">Society:</label></br>
   <input type="text" name="society"><br>
-  <label for="address">Address:</label></br>
-  <input type="text" name="address"><br>
+  <label for="addres">Address:</label></br>
+  <input type="text" name="addres"><br>
   <label for="zipcode">Zip Code:</label></br>
   <input type="text" name="zipcode"><br>
   <label for="city">City:</label></br>
@@ -18,6 +18,8 @@
   <input type="text" name="phone"><br>
   <label for="fax">Fax No.:</label></br>
   <input type="text" name="fax"><br>
+  <label for="max_oustanding">Max Outstanding:</label></br>
+  <input type="text" name="max_oustanding"><br>
 
   <br><input type="submit" value="Register">
 </form>
