--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('header'); -%>
     <div class="content">
-        <h1 id="welcome">WELCOME to Webstore test</h1>
+        <h1 id="welcome">WELCOME to Webstore</h1>
     </div>
 <%- include('footer'); -%>
