--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <%- include('header'); -%>
-<form action="api/register" method="POST">
+<form action="/api/register" method="POST">
   <label for="username">Username:</label></br>
   <input type="username" name="username"><br>
   <label for="password">Password:</label></br>
