--- a/views/header.ejs
+++ b/views/header.ejs
@@ -41,7 +41,7 @@
             </td>
 
             <td>
-              <a href="controller.php?action=6">Cart</a>
+              <a href="/api/cart">Cart</a>
             </td>
             <td>
               <a href="/login">Sign-in</a>
