--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,11 @@
 <%- include('header'); -%>
 <a href="register">Click here to register</a>
 
-<form action="/api/login" method="GET">
+<form action="/api/login" method="POST">
   <label for="username">Username:</label></br>
   <input type="text" name="username"><br>
   <label for="password">Password:</label></br>
-  <input type="text" name="password"><br>
+  <input type="password" name="password"><br>
   <br><input type="submit" value="Log In">
 </form>
 <%- include('footer'); -%>
