Added cart functionality

--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,10 +1,19 @@
 <%- include('header'); -%>
 <div class="content">
+  
   <h1><%= product.name %></h1>
   <h2><%= product.price %> AED <span style="font-weight: normal">
     (plus <%= product.vat %> AED VAT)</span></h2>
-  <h3><%= product.category %>, <%= product.stock %> in stock, 
+  <h3><%= product.reference %>, <%= product.category %>, <%= product.stock %> in stock, 
     <%= product.critical_stock %> critical stock</h3>
+
+  <form action="/api/cart" method="POST">
+    <input type="number" value="1" size="2" min="1" max="<%= product.stock %>" name="quantity">
+    <input type="hidden" value="<%= product.reference %>" name="reference">
+    <input type="hidden" value='<%= JSON.stringify(product) %>' name="product">
+    <input type="submit" value="Add To Cart">
+  </form>
+
   <a href="/api/catalog"><button>Back to Catalog</button></a>
 </div>
 <%- include('footer'); -%>
